[gd_scene load_steps=5 format=3 uid="uid://c883xmrkudb7w"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_y45kh"]
[ext_resource type="Texture2D" uid="uid://d1dh54pg55tep" path="res://sprites/player.png" id="2_p7005"]
[ext_resource type="Texture2D" uid="uid://bbilob1csutwi" path="res://sprites/move_arrow.png" id="3_38emc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xw7ka"]
size = Vector2(16, 16)

[node name="Player" type="Area2D"]
position = Vector2(72, 72)
script = ExtResource("1_y45kh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_xw7ka")

[node name="Sprite" type="Sprite2D" parent="."]
z_index = 5
position = Vector2(2.08165e-12, 2.08165e-12)
texture = ExtResource("2_p7005")

[node name="DraggedSprite" type="Sprite2D" parent="."]
z_index = 5
position = Vector2(2.08165e-12, 2.08165e-12)
texture = ExtResource("3_38emc")
offset = Vector2(16, 2.08165e-12)

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="input_event" from="." to="." method="_on_input_event"]
